fix bg image resizing on mobile browsers

--- a/src/main/webapp/less/90_project.less
+++ b/src/main/webapp/less/90_project.less
@@ -55,20 +55,16 @@
 html, body {
     height: 100%;
 }
-html{
-  background: url('/images/bg.jpg') no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
 body {
     padding-top: 50px;
-    background-color: transparent;
+    background-color: @bgColor;
 }
 .wrapper {
-    z-index: 2;
-    position:relative;
+    background: url('/images/bg.jpg') no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     min-height: 100%;
     height: auto !important;
     height: 100%;
@@ -82,7 +78,6 @@ body {
     z-index: 2;
     position: relative;
     padding-top: 2*@spacing;
-    padding-bottom: 2*@spacing;
     text-align: center;
 }
 .footer-container{
